--- a/site/assets/css/map.css
+++ b/site/assets/css/map.css
@@ -1,10 +1,10 @@
-/* line 35, ../sass/map.scss */
+/* line 33, ../sass/core.scss */
 html {
   height: 100%;
   font-family: Helvetica;
 }
 
-/* line 40, ../sass/map.scss */
+/* line 38, ../sass/core.scss */
 body {
   position: relative;
   height: 100%;
@@ -18,23 +18,23 @@ body {
   overflow: hidden;
 }
 
-/* line 51, ../sass/map.scss */
+/* line 49, ../sass/core.scss */
 .color-low {
   color: #89e63b;
 }
 
-/* line 54, ../sass/map.scss */
+/* line 52, ../sass/core.scss */
 .color-med {
   color: #fbf658;
 }
 
-/* line 57, ../sass/map.scss */
+/* line 55, ../sass/core.scss */
 .color-high {
   color: #dd7663;
 }
 
 /* Containers */
-/* line 63, ../sass/map.scss */
+/* line 4, ../sass/map.scss */
 article {
   position: absolute;
   -webkit-transition: left 0.6s ease-in-out;
@@ -44,7 +44,7 @@ article {
 }
 
 /* Left Menu */
-/* line 70, ../sass/map.scss */
+/* line 11, ../sass/map.scss */
 #left-container {
   top: 0;
   left: -15%;
@@ -58,11 +58,11 @@ article {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-/* line 80, ../sass/map.scss */
+/* line 21, ../sass/map.scss */
 body.menu-left #left-container {
   left: 0;
 }
-/* line 83, ../sass/map.scss */
+/* line 24, ../sass/map.scss */
 #left-container h2 {
   color: #818181;
   font-family: "Helvetica";
@@ -72,7 +72,7 @@ body.menu-left #left-container {
   margin: 0 0 0.3em;
   text-indent: 0.5em;
 }
-/* line 92, ../sass/map.scss */
+/* line 33, ../sass/map.scss */
 #left-container .tags {
   margin-top: 0;
   min-height: 50%;
@@ -91,7 +91,7 @@ body.menu-left #left-container {
   -moz-box-shadow: #777777 0px -2px 2px -2px inset, black 0px 2px 6px -1px inset;
   box-shadow: #777777 0px -2px 2px -2px inset, black 0px 2px 6px -1px inset;
 }
-/* line 101, ../sass/map.scss */
+/* line 42, ../sass/map.scss */
 #left-container .tags .tag {
   display: inline-block;
   font-size: 0.9em;
@@ -108,7 +108,7 @@ body.menu-left #left-container {
   cursor: pointer;
   border: solid 1px #333;
 }
-/* line 112, ../sass/map.scss */
+/* line 53, ../sass/map.scss */
 #left-container .tags .tag:hover, #left-container .tags .tag.active {
   background: #ff9c4c;
   background: -webkit-gradient(linear, left top, left bottom, from(#ff9c4c), to(#ff7400));
@@ -118,7 +118,7 @@ body.menu-left #left-container {
 }
 
 /* Top Bar */
-/* line 125, ../sass/map.scss */
+/* line 66, ../sass/map.scss */
 #top-bar {
   height: 50px;
   max-height: 50px;
@@ -133,7 +133,7 @@ body.menu-left #left-container {
   box-sizing: border-box;
   z-index: 100;
 }
-/* line 136, ../sass/map.scss */
+/* line 77, ../sass/map.scss */
 #top-bar button {
   display: inline-block;
   position: relative;
@@ -143,7 +143,7 @@ body.menu-left #left-container {
   font-size: 0.9em;
   padding: 5px 8px;
 }
-/* line 145, ../sass/map.scss */
+/* line 86, ../sass/map.scss */
 #top-bar .right {
   display: inline-block;
   position: absolute;
@@ -152,7 +152,7 @@ body.menu-left #left-container {
   font-size: 0.8em;
   text-align: right;
 }
-/* line 153, ../sass/map.scss */
+/* line 94, ../sass/map.scss */
 #top-bar h1.page-title {
   display: inline-block;
   height: 100%;
@@ -164,11 +164,11 @@ body.menu-left #left-container {
   font-family: "Lato";
   font-style: italic;
 }
-/* line 164, ../sass/map.scss */
+/* line 105, ../sass/map.scss */
 body.menu-left #top-bar {
   left: 15%;
 }
-/* line 167, ../sass/map.scss */
+/* line 108, ../sass/map.scss */
 #top-bar .header-link {
   color: yellow;
   text-decoration: none;
@@ -178,7 +178,7 @@ body.menu-left #top-bar {
   font-size: 0.9em;
 }
 
-/* line 177, ../sass/map.scss */
+/* line 118, ../sass/map.scss */
 .button {
   display: inline-block;
   outline: none;
@@ -197,7 +197,7 @@ body.menu-left #top-bar {
   -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 }
-/* line 188, ../sass/map.scss */
+/* line 129, ../sass/map.scss */
 .button.blue {
   color: #d9eef7;
   border: solid 1px #0076a3;
@@ -206,13 +206,13 @@ body.menu-left #top-bar {
   background: -moz-linear-gradient(top, #00adee, #0078a5);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00adee', endColorstr='#0078a5');
 }
-/* line 195, ../sass/map.scss */
+/* line 136, ../sass/map.scss */
 .button.blue:hover {
   background: -webkit-gradient(linear, left top, left bottom, from(#0078a5), to(#00adee));
   background: -moz-linear-gradient(top, #0078a5, #00adee);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0078a5', endColorstr='#00adee');
 }
-/* line 201, ../sass/map.scss */
+/* line 142, ../sass/map.scss */
 .button.gray {
   color: #d9eef7;
   border: solid 1px #333;
@@ -221,13 +221,13 @@ body.menu-left #top-bar {
   background: -moz-linear-gradient(top, #828c95, #28343b);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#828c95', endColorstr='#28343b');
 }
-/* line 208, ../sass/map.scss */
+/* line 149, ../sass/map.scss */
 .button.gray:hover {
   background: -webkit-gradient(linear, left top, left bottom, from(#28343b), to(#828c95));
   background: -moz-linear-gradient(top, #28343b, #828c95);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#28343b', endColorstr='#828c95');
 }
-/* line 214, ../sass/map.scss */
+/* line 155, ../sass/map.scss */
 .button.orange {
   color: #d9eef7;
   border: solid 1px #333;
@@ -236,24 +236,24 @@ body.menu-left #top-bar {
   background: -moz-linear-gradient(top, #ff9c4c, #ff7400);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff9c4c', endColorstr='#ff7400');
 }
-/* line 221, ../sass/map.scss */
+/* line 162, ../sass/map.scss */
 .button.orange:hover {
   background: -webkit-gradient(linear, left top, left bottom, from(#ff7400), to(#ff9c4c));
   background: -moz-linear-gradient(top, #ff7400, #ff9c4c);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff7400', endColorstr='#ff9c4c');
 }
-/* line 227, ../sass/map.scss */
+/* line 168, ../sass/map.scss */
 .button:hover {
   text-decoration: none;
 }
-/* line 230, ../sass/map.scss */
+/* line 171, ../sass/map.scss */
 .button:active {
   position: relative;
   top: 1px;
 }
 
 /* Map Container */
-/* line 238, ../sass/map.scss */
+/* line 179, ../sass/map.scss */
 #container-map {
   top: 5%;
   left: 0%;
@@ -261,11 +261,11 @@ body.menu-left #top-bar {
   width: 100%;
   z-index: 50;
 }
-/* line 244, ../sass/map.scss */
+/* line 185, ../sass/map.scss */
 body.menu-left #container-map {
   left: 15%;
 }
-/* line 247, ../sass/map.scss */
+/* line 188, ../sass/map.scss */
 #container-map .infobox-container {
   display: block;
   font-size: 0.875em;
@@ -287,20 +287,20 @@ body.menu-left #container-map {
   box-shadow: rgba(0, 0, 0, 0.3) 2px 2px 2px 2px;
   overflow-y: auto;
 }
-/* line 259, ../sass/map.scss */
+/* line 200, ../sass/map.scss */
 #container-map .infobox-container > img {
   position: absolute !important;
   top: 5px;
   right: 5px;
 }
-/* line 264, ../sass/map.scss */
+/* line 205, ../sass/map.scss */
 #container-map .infobox-container span.title {
   display: block;
   width: 100%;
   font-size: 1.3em;
   font-weight: bold;
 }
-/* line 271, ../sass/map.scss */
+/* line 212, ../sass/map.scss */
 #container-map .infobox-container .price {
   display: inline-block;
   font-size: 0.8em;
@@ -312,26 +312,26 @@ body.menu-left #container-map {
   -o-border-radius: 3px;
   border-radius: 3px;
 }
-/* line 277, ../sass/map.scss */
+/* line 218, ../sass/map.scss */
 #container-map .infobox-container .price[data-price="low"] {
   background-color: #89e63b;
 }
-/* line 280, ../sass/map.scss */
+/* line 221, ../sass/map.scss */
 #container-map .infobox-container .price[data-price="med"] {
   background-color: #fbf658;
 }
-/* line 283, ../sass/map.scss */
+/* line 224, ../sass/map.scss */
 #container-map .infobox-container .price[data-price="high"] {
   background-color: #dd7663;
 }
-/* line 287, ../sass/map.scss */
+/* line 228, ../sass/map.scss */
 #container-map .infobox-container .tags {
   display: inline-block;
   margin-left: 5px;
   font-size: 0.8em;
   font-style: italic;
 }
-/* line 293, ../sass/map.scss */
+/* line 234, ../sass/map.scss */
 #container-map .infobox-container h2 {
   font-size: 1em;
   font-weight: normal;
@@ -339,13 +339,13 @@ body.menu-left #container-map {
   margin: 0;
   padding: 0;
 }
-/* line 300, ../sass/map.scss */
+/* line 241, ../sass/map.scss */
 #container-map .infobox-container p:last-child {
   margin-bottom: 0px;
 }
 
 /* Bottom -- Listings */
-/* line 308, ../sass/map.scss */
+/* line 249, ../sass/map.scss */
 #bottom-container {
   height: 100px;
   max-height: 100px;
@@ -358,16 +358,16 @@ body.menu-left #container-map {
   z-index: 150;
   background: url("../img/bg_linen_light.png") repeat;
 }
-/* line 316, ../sass/map.scss */
+/* line 257, ../sass/map.scss */
 body.menu-left #bottom-container {
   left: 15%;
 }
-/* line 319, ../sass/map.scss */
+/* line 260, ../sass/map.scss */
 body.menu-bottom #bottom-container {
   height: 15%;
 }
 
-/* line 323, ../sass/map.scss */
+/* line 264, ../sass/map.scss */
 .listing-scroll {
   display: block;
   position: relative;
@@ -377,11 +377,11 @@ body.menu-bottom #bottom-container {
   overflow-x: auto;
   overflow-y: hidden;
 }
-/* line 331, ../sass/map.scss */
+/* line 272, ../sass/map.scss */
 .listing-scroll .listing-container {
   width: 100%;
 }
-/* line 333, ../sass/map.scss */
+/* line 274, ../sass/map.scss */
 .listing-scroll .listing-container .listing {
   position: relative;
   -webkit-box-sizing: border-box;
@@ -416,7 +416,7 @@ body.menu-bottom #bottom-container {
   margin: 5px;
   cursor: pointer;
 }
-/* line 349, ../sass/map.scss */
+/* line 290, ../sass/map.scss */
 .listing-scroll .listing-container .listing:hover, .listing-scroll .listing-container .listing.active {
   background-color: #999;
   background-color: #0090ff;
@@ -433,27 +433,27 @@ body.menu-bottom #bottom-container {
   -moz-box-shadow: rgba(242, 242, 242, 0.4) 0 0 25px;
   box-shadow: rgba(242, 242, 242, 0.4) 0 0 25px;
 }
-/* line 354, ../sass/map.scss */
+/* line 295, ../sass/map.scss */
 .listing-scroll .listing-container .listing .title {
   font-size: 0.9em;
 }
-/* line 357, ../sass/map.scss */
+/* line 298, ../sass/map.scss */
 .listing-scroll .listing-container .listing .price {
   font-size: 0.65em;
 }
-/* line 359, ../sass/map.scss */
+/* line 300, ../sass/map.scss */
 .listing-scroll .listing-container .listing .price[data-price="low"] {
   color: #89e63b;
 }
-/* line 362, ../sass/map.scss */
+/* line 303, ../sass/map.scss */
 .listing-scroll .listing-container .listing .price[data-price="med"] {
   color: #fbf658;
 }
-/* line 365, ../sass/map.scss */
+/* line 306, ../sass/map.scss */
 .listing-scroll .listing-container .listing .price[data-price="high"] {
   color: #dd7663;
 }
-/* line 369, ../sass/map.scss */
+/* line 310, ../sass/map.scss */
 .listing-scroll .listing-container .listing .metadata {
   width: 75%;
   padding: 3% 0;
@@ -462,7 +462,7 @@ body.menu-bottom #bottom-container {
   -moz-box-sizing: content-box;
   box-sizing: content-box;
 }
-/* line 375, ../sass/map.scss */
+/* line 316, ../sass/map.scss */
 .listing-scroll .listing-container .listing .best-of {
   position: absolute;
   top: 5px;
@@ -470,7 +470,7 @@ body.menu-bottom #bottom-container {
 }
 
 /* Welcome Message */
-/* line 386, ../sass/map.scss */
+/* line 327, ../sass/map.scss */
 #container-welcome {
   z-index: 100;
   display: block;
@@ -484,16 +484,16 @@ body.menu-bottom #bottom-container {
   color: #f2f2f2;
   background-color: rgba(0, 0, 0, 0.8);
 }
-/* line 399, ../sass/map.scss */
+/* line 340, ../sass/map.scss */
 #container-welcome p:first-of-type {
   margin-top: 0px;
   padding-top: 0px;
 }
-/* line 403, ../sass/map.scss */
+/* line 344, ../sass/map.scss */
 #container-welcome p:last-child {
   margin-bottom: 0px;
 }
-/* line 407, ../sass/map.scss */
+/* line 348, ../sass/map.scss */
 #container-welcome #js-close-welcome {
   position: absolute;
   display: inline-block;
