--- a/site/assets/css/admin.css
+++ b/site/assets/css/admin.css
@@ -83,25 +83,33 @@ body {
   margin-bottom: 10px;
 }
 /* line 39, ../sass/admin.scss */
+#add-listing div input, #add-listing div textarea {
+  width: 500px;
+}
+/* line 42, ../sass/admin.scss */
+#add-listing div textarea {
+  height: 200px;
+}
+/* line 46, ../sass/admin.scss */
 #add-listing div.group {
   margin-top: 5px;
 }
-/* line 41, ../sass/admin.scss */
+/* line 48, ../sass/admin.scss */
 #add-listing div.group span {
   display: block;
   font-weight: bold;
   font-style: italic;
   margin-bottom: 5px;
 }
-/* line 47, ../sass/admin.scss */
+/* line 54, ../sass/admin.scss */
 #add-listing div.group > div {
   padding-left: 10px;
 }
-/* line 50, ../sass/admin.scss */
+/* line 57, ../sass/admin.scss */
 #add-listing div.group label {
   width: 140px;
 }
-/* line 55, ../sass/admin.scss */
+/* line 62, ../sass/admin.scss */
 #add-listing label {
   display: inline-block;
   position: relative;
@@ -109,13 +117,13 @@ body {
   font-weight: bold;
 }
 
-/* line 63, ../sass/admin.scss */
+/* line 70, ../sass/admin.scss */
 .list {
   margin: 0;
   padding: 0;
   list-style: none;
 }
-/* line 67, ../sass/admin.scss */
+/* line 74, ../sass/admin.scss */
 .list li {
   display: block;
   position: relative;
@@ -128,21 +136,21 @@ body {
   background-color: #cdf1ff;
   margin-bottom: 5px;
 }
-/* line 76, ../sass/admin.scss */
+/* line 83, ../sass/admin.scss */
 .list li div {
   display: block;
   position: relative;
 }
-/* line 79, ../sass/admin.scss */
+/* line 86, ../sass/admin.scss */
 .list li div.name {
   font-size: 16px;
 }
-/* line 85, ../sass/admin.scss */
+/* line 92, ../sass/admin.scss */
 .list li div.description h2 {
   font-size: 14px;
   margin: 5px 0;
 }
-/* line 90, ../sass/admin.scss */
+/* line 97, ../sass/admin.scss */
 .list li .label {
   font-weight: bold;
   margin-right: 10px;
