Add button to toggle visibility of listing details

--- a/site/assets/css/admin.css
+++ b/site/assets/css/admin.css
@@ -146,6 +146,10 @@ body {
   font-size: 16px;
   display: inline-block;
 }
+/* line 90, ../sass/admin.scss */
+.list li div.slide {
+  display: none;
+}
 /* line 93, ../sass/admin.scss */
 .list li div.description h2 {
   font-size: 14px;
