--- a/site/assets/sass/admin.scss
+++ b/site/assets/sass/admin.scss
@@ -88,7 +88,7 @@ body {
                 display: inline-block;
             }
             &.slide {
-                // display: none;
+                display: none;
             }
             &.description h2 {
                 font-size: 14px;
