Add link to css file in core template for main

--- a/site/assets/js/templates/main/index.html
+++ b/site/assets/js/templates/main/index.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" type="text/css" href="assets/css/map.css">
+
 <article id="left-container">
     <h2>Filter by Tag</h2>
     <ul id="container-tags" class="tags">
