Wholesale checkin of relatively inconsequential front-end stuff

--- a/site/assets/css/home.css
+++ b/site/assets/css/home.css
@@ -33,55 +33,6 @@ body {
   color: #dd7663;
 }
 
-/* line 59, ../sass/core.scss */
-#title-bar {
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  color: #fff;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  border-bottom: 1px solid #adadad;
-  height: 50px;
-  line-height: 50px;
-}
-/* line 70, ../sass/core.scss */
-#title-bar h1 {
-  font-size: 2em;
-  margin: 0;
-  padding: 0;
-  line-height: 50px;
-}
-
-/* line 77, ../sass/core.scss */
-#left-panel {
-  display: block;
-  position: absolute;
-  top: 50px;
-  left: 0;
-  width: 240px;
-  background-color: #f2f2f2;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-/* line 86, ../sass/core.scss */
-#right-panel {
-  display: block;
-  position: absolute;
-  top: 50px;
-  left: 240px;
-  width: 500px;
-  background-color: #fff;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
 /* line 3, ../sass/home.scss */
 .title {
   display: block;
@@ -112,4 +63,104 @@ form .line {
 form label {
   display: block;
   margin-bottom: 2px;
+}
+
+/* line 34, ../sass/home.scss */
+#title-bar {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  color: #fff;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border-bottom: 1px solid #adadad;
+  height: 50px;
+  line-height: 50px;
+}
+/* line 45, ../sass/home.scss */
+#title-bar h1 {
+  display: inline-block;
+  float: left;
+  font-size: 2em;
+  margin: 0;
+  padding: 0;
+  line-height: 50px;
+}
+/* line 53, ../sass/home.scss */
+#title-bar .user-menu {
+  display: inline-block;
+  float: right;
+}
+
+/* line 58, ../sass/home.scss */
+#left-panel {
+  display: block;
+  position: absolute;
+  top: 50px;
+  left: 0;
+  width: 240px;
+  background-color: #f2f2f2;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  overflow-y: auto;
+}
+
+/* line 68, ../sass/home.scss */
+#right-panel {
+  display: block;
+  position: absolute;
+  top: 50px;
+  left: 240px;
+  padding: 10px 20px;
+  background-color: #adadad;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  overflow-y: auto;
+}
+
+/* line 79, ../sass/home.scss */
+.collapse {
+  display: block;
+  position: relative;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 100%;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+}
+/* line 86, ../sass/home.scss */
+.collapse .collapse-header {
+  color: white;
+  background-color: #888;
+  padding: 3px 2px;
+  font-size: 14px;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -ms-border-radius: 2px;
+  -o-border-radius: 2px;
+  border-radius: 2px;
+}
+
+/* line 95, ../sass/home.scss */
+.text-panel {
+  display: block;
+  position: relative;
+  width: 100%;
+  margin: 0 auto 20px;
+  padding: 10px 20px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  border-radius: 10px;
+  background-color: #f2f2f2;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
