--- a/site/assets/js/templates/home/header.html
+++ b/site/assets/js/templates/home/header.html
@@ -1,1 +1,6 @@
-<header id='title-bar'><h1>MapEater</h1></header>
+<header id='title-bar'>
+    <h1>MapEater</h1>
+    <div class="user-menu">
+        Username
+    </div>
+</header>
