--- a/site/assets/js/templates/home/home.html
+++ b/site/assets/js/templates/home/home.html
@@ -1,8 +1,53 @@
 <link rel="stylesheet" type="text/css" href="assets/css/home.css">
 
 <article id="left-panel">
-    
+    <h2>Maps</h2>
+    <div class="map-panel-item collapse" data-map-id="12345">
+        <div class="collapse-header">
+            <span class="map-name">Notable NOVA Eateries</span>
+            <div class="controls">
+                <a href="javascript:;" class="map-edit">edit</a> | <a href="javascript:;" class="map-delete">delete</a>
+            </div>
+        </div>
+        <div class="collapse-content map-description">
+            Map Description
+        </div>
+    </div>
 </article>
+
+
 <article id="right-panel">
-    
+    <div class="text-panel">
+        <h2>Welcome back, user!</h2>
+    </div>
+    <div class="text-panel">
+        <h2>Some text</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+    </div>
+    <div class="text-panel">
+        <h2>Moar text</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+    </div>
 </article>
