Add a user model that is instantiated on the Home view.  It's bogus for now; just takes first user in the users table.  Parse it in templates on home

--- a/site/assets/js/templates/home/header.html
+++ b/site/assets/js/templates/home/header.html
@@ -1,6 +1,6 @@
 <header id='title-bar'>
     <h1>MapEater</h1>
     <div class="user-menu">
-        Username
+        <%= email %>
     </div>
 </header>
