--- a/site/assets/js/templates/home/home.html
+++ b/site/assets/js/templates/home/home.html
@@ -18,10 +18,10 @@
 
 <article id="right-panel">
     <div class="text-panel">
-        <h2>Welcome back, user!</h2>
+        <h2>Welcome back, <%= email %>! Password is: <%= password %></h2>
     </div>
     <div class="text-panel">
-        <h2>Some text</h2>
+        <h2>Some sort of messaging</h2>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
