Set up local auth with passport.  IT WORKS.  SHINE ON YOU CRAZY DIAMOND

--- a/site/assets/js/templates/home/splash.html
+++ b/site/assets/js/templates/home/splash.html
@@ -10,10 +10,10 @@
 </div>
 
 <article class="login">
-    <form id="login" action="#">
+    <form id="login" action="/login" method="POST">
         <div class="line">
-            <label for="username">Username</label>
-            <input type="text" name="username" id="username">
+            <label for="email">Email</label>
+            <input type="text" name="email" id="email">
         </div>
         <div class="line">
             <label for="password">Password</label>
