Render maps per user

--- a/site/assets/js/templates/home/home.html
+++ b/site/assets/js/templates/home/home.html
@@ -2,16 +2,7 @@
 
 <article id="left-panel">
     <h2>Maps</h2>
-    <div class="map-panel-item collapse" data-map-id="12345">
-        <div class="collapse-header">
-            <span class="map-name">Notable NOVA Eateries</span>
-            <div class="controls">
-                <a href="javascript:;" class="map-edit">edit</a> | <a href="javascript:;" class="map-delete">delete</a>
-            </div>
-        </div>
-        <div class="collapse-content map-description">
-            Map Description
-        </div>
+    <div id="maps-list">
     </div>
 </article>
 
