Adjust the template

--- a/site/assets/js/templates/home/mapsListing.html
+++ b/site/assets/js/templates/home/mapsListing.html
@@ -1,6 +1,6 @@
 <div class="map-panel-item collapse" data-map-id="<%= id %>">
     <div class="collapse-header">
-        <span class="map-name"><%= name %></span>
+        <a href="javascript:;" class="map-name"><%= name %></a>
         <div class="controls">
             <a href="javascript:;" class="map-edit">edit</a> | <a href="javascript:;" class="map-delete">delete</a>
         </div>
