Fetch a map object when initializing the map, and use it to fill in the necessary parts of the mapview template

--- a/site/assets/js/templates/home/mapsListing.html
+++ b/site/assets/js/templates/home/mapsListing.html
@@ -2,10 +2,10 @@
     <div class="collapse-header">
         <a href="javascript:;" class="map-name"><%= name %></a>
         <div class="controls">
-            <a href="javascript:;" class="map-edit">edit</a> | <a href="javascript:;" class="map-delete">delete</a>
+            <a href="javascript:;" class="map-edit">edit</a>
         </div>
     </div>
     <div class="collapse-content map-description">
-        <%= welcome_message %>
+        <%= description %>
     </div>
 </div>
