Add the logout button, and the API endpoint to make it work

--- a/site/assets/js/templates/home/header.html
+++ b/site/assets/js/templates/home/header.html
@@ -1,6 +1,6 @@
 <header id='title-bar'>
     <h1>MapEater</h1>
     <div class="user-menu">
-        <%= email %>
+        <%= email %> | <a id="logout" title="Logout" href="javascript:;">(Logout)</a>
     </div>
 </header>
