--- a/site/assets/js/templates/admin/index.html
+++ b/site/assets/js/templates/admin/index.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" type="text/css" href="assets/css/admin.css">
 
 <article class="admin-eateries">
-    <h1 class="top">Eateries</h1>
+    <h1 class="top"><%= name %></h1>
     <section class="form">
         <form id="add-listing" action="#">
         </form>
