--- a/site/assets/js/templates/admin/admin-listing.html
+++ b/site/assets/js/templates/admin/admin-listing.html
@@ -1,7 +1,7 @@
 <div class="options">
     <a href="javascript:;" data-id="<%=id%>" class="model-edit">Edit</a> |
     <a href="javascript:;" data-id="<%=id%>" class="model-delete">Delete</a> |
-    <a href="javascript:;" class="collapse">Show/Hide Details</a>
+    <a href="javascript:;" class="hideShow">Show/Hide Details</a>
 </div>
 <div class="name">
     <span class="label">Name:</span>
