Check in whatever it was I was working on before I branched, because it'll probably be removed anyway

--- a/site/assets/js/templates/home/home.html
+++ b/site/assets/js/templates/home/home.html
@@ -1,6 +1,7 @@
 <link rel="stylesheet" type="text/css" href="assets/css/home.css">
 
 <article id="left-panel">
+    <a href="javascript:;" id="home">Home</a>
     <h2>Maps</h2>
     <div id="maps-list">
     </div>
