Fix relative links for css and images

--- a/site/assets/js/templates/map/index.html
+++ b/site/assets/js/templates/map/index.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="assets/css/map.css">
+<link rel="stylesheet" type="text/css" href="/assets/css/map.css">
 
 <article id="left-container">
     <h2>Filter by Tag</h2>
@@ -45,6 +45,6 @@
         <li><span class="color-high">Red</span>: Expensive (> $25)</li>
     </ul>
     <p>
-        Current best restaurants are denoted by a <img style="vertical-align: middle;" src="assets/img/star.png" title="Star"/>.
+        Current best restaurants are denoted by a <img style="vertical-align: middle;" src="/assets/img/star.png" title="Star"/>.
     </p>
 </div>
