--- a/site/assets/js/templates/map/template-listing.html
+++ b/site/assets/js/templates/map/template-listing.html
@@ -3,5 +3,5 @@
     <div class="price" data-price="<%= price %>"><%= price_map %></div>
 </div>
 <% if (tags.indexOf("BestOf") > -1) { %>
-    <img class="best-of" src="assets/img/star.png"/>
+    <img class="best-of" src="/assets/img/star.png"/>
 <% } %>
