--- a/site/assets/css/map.css
+++ b/site/assets/css/map.css
@@ -53,7 +53,7 @@ article {
   width: 15%;
   padding: 10px 12px;
   color: #f2f2f2;
-  background: url("../img/bg_linen_light.png") repeat;
+  background: url("/assets/img/bg_linen_light.png") repeat;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -77,7 +77,7 @@ body.menu-left #left-container {
   margin-top: 0;
   min-height: 50%;
   width: 100%;
-  background: url("../img/bg_linen.png") repeat;
+  background: url("/assets/img/bg_linen.png") repeat;
   padding: 0.4em 0.5em;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -125,7 +125,7 @@ body.menu-left #left-container {
   width: 100%;
   left: 0;
   background-color: #222222;
-  background: url("../img/bg_linen_light.png") repeat;
+  background: url("/assets/img/bg_linen_light.png") repeat;
   color: #f2f2f2;
   border: 0px;
   -webkit-box-sizing: border-box;
@@ -356,7 +356,7 @@ body.menu-left #container-map {
   -o-transition: left 0.6s ease-in-out, height 0.4s ease-in-out;
   transition: left 0.6s ease-in-out, height 0.4s ease-in-out;
   z-index: 150;
-  background: url("../img/bg_linen_light.png") repeat;
+  background: url("/assets/img/bg_linen_light.png") repeat;
 }
 /* line 257, ../sass/map.scss */
 body.menu-left #bottom-container {
