--- a/site/assets/sass/map.scss
+++ b/site/assets/sass/map.scss
@@ -16,7 +16,7 @@ article {
     width: $menu-left-transition-percentage;
     padding: 10px 12px;
     color: $color-lightgray;
-    background: url("../img/bg_linen_light.png") repeat;
+    background: url("/assets/img/bg_linen_light.png") repeat;
     @include box-sizing(border-box);
     body.menu-left & {
         left: 0;
@@ -34,7 +34,7 @@ article {
         margin-top: 0;
         min-height: 50%;
         width: 100%;
-        background: url("../img/bg_linen.png") repeat;
+        background: url("/assets/img/bg_linen.png") repeat;
         padding: 0.4em 0.5em;
         @include box-sizing(border-box);
         @include border-radius(10px);
@@ -69,7 +69,7 @@ article {
     width: 100%;
     left: 0;
     background-color: $color-black;
-    background: url("../img/bg_linen_light.png") repeat;
+    background: url("/assets/img/bg_linen_light.png") repeat;
     color: $color-lightgray;
     border: 0px;
     @include box-sizing(border-box);
@@ -253,7 +253,7 @@ article {
     width: 100%;
     @include transition(left $menu-left-duration ease-in-out, height $menu-bottom-duration ease-in-out); 
     z-index: 150;
-    background: url("../img/bg_linen_light.png") repeat;
+    background: url("/assets/img/bg_linen_light.png") repeat;
     body.menu-left & {
         left: $menu-left-transition-percentage;
     }
