--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
     <meta name="author" content="Daniel Na" />
     <meta name="description" content="My map of favorite places to eat in Northern VA/MD/DC.">
     <title>MAPEATER | om nom nom</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/normalize.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:900italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
@@ -22,7 +22,7 @@
       </article>
     </div>
 
-    <script data-main="/assets/js/foodmap.init.js" src="assets/js/lib/require.js"></script>
+    <script data-main="/assets/js/foodmap.init.js" src="/assets/js/lib/require.js"></script>
 
     <!--
     <script type="text/javascript">
