--- a/views/map.html
+++ b/views/map.html
@@ -5,14 +5,14 @@
     <meta name="author" content="Daniel Na" />
     <meta name="description" content="My map of favorite places to eat in Northern VA/MD/DC.">
     <title>MAPEATER | om nom nom</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/normalize.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:900italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <div class="app-container">
     </div>
 
-    <script data-main="/assets/js/foodmap.map.js" src="assets/js/lib/require.js"></script>
+    <script data-main="/assets/js/foodmap.map.js" src="/assets/js/lib/require.js"></script>
 
     <!--
     <script type="text/javascript">
