--- a/site/assets/css/admin.css
+++ b/site/assets/css/admin.css
@@ -46,22 +46,21 @@ body {
   width: 100%;
   background-color: #fff;
   margin: 0px auto;
-  padding: 20px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-/* line 16, ../sass/admin.scss */
+/* line 15, ../sass/admin.scss */
 .admin-eateries h1 {
   text-align: center;
-  margin: 20px 0;
+  margin: 0 0 20px;
 }
-/* line 19, ../sass/admin.scss */
+/* line 18, ../sass/admin.scss */
 .admin-eateries h1.top {
   margin-top: 0;
 }
 
-/* line 25, ../sass/admin.scss */
+/* line 24, ../sass/admin.scss */
 .form, .eateries-list {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -72,7 +71,13 @@ body {
   padding: 20px;
 }
 
-/* line 33, ../sass/admin.scss */
+/* line 32, ../sass/admin.scss */
+.form {
+  display: none;
+  margin-bottom: 20px;
+}
+
+/* line 38, ../sass/admin.scss */
 #add-listing div {
   display: block;
   position: relative;
@@ -81,34 +86,34 @@ body {
   box-sizing: border-box;
   margin-bottom: 10px;
 }
-/* line 38, ../sass/admin.scss */
+/* line 43, ../sass/admin.scss */
 #add-listing div input, #add-listing div textarea {
   width: 500px;
 }
-/* line 41, ../sass/admin.scss */
+/* line 46, ../sass/admin.scss */
 #add-listing div textarea {
   height: 200px;
 }
-/* line 44, ../sass/admin.scss */
+/* line 49, ../sass/admin.scss */
 #add-listing div.group {
   margin-top: 5px;
 }
-/* line 46, ../sass/admin.scss */
+/* line 51, ../sass/admin.scss */
 #add-listing div.group span {
   display: block;
   font-weight: bold;
   font-style: italic;
   margin-bottom: 5px;
 }
-/* line 52, ../sass/admin.scss */
+/* line 57, ../sass/admin.scss */
 #add-listing div.group > div {
   padding-left: 10px;
 }
-/* line 55, ../sass/admin.scss */
+/* line 60, ../sass/admin.scss */
 #add-listing div.group label {
   width: 140px;
 }
-/* line 60, ../sass/admin.scss */
+/* line 65, ../sass/admin.scss */
 #add-listing label {
   display: inline-block;
   position: relative;
@@ -116,13 +121,13 @@ body {
   font-weight: bold;
 }
 
-/* line 68, ../sass/admin.scss */
+/* line 73, ../sass/admin.scss */
 .list {
   margin: 0;
   padding: 0;
   list-style: none;
 }
-/* line 72, ../sass/admin.scss */
+/* line 77, ../sass/admin.scss */
 .list li {
   display: block;
   position: relative;
@@ -135,32 +140,32 @@ body {
   background-color: #cdf1ff;
   margin-bottom: 5px;
 }
-/* line 81, ../sass/admin.scss */
+/* line 86, ../sass/admin.scss */
 .list li div {
   display: block;
   position: relative;
 }
-/* line 84, ../sass/admin.scss */
+/* line 89, ../sass/admin.scss */
 .list li div.name {
   font-size: 16px;
   display: inline-block;
 }
-/* line 88, ../sass/admin.scss */
+/* line 93, ../sass/admin.scss */
 .list li div.slide {
   display: none;
 }
-/* line 91, ../sass/admin.scss */
+/* line 96, ../sass/admin.scss */
 .list li div.description h2 {
   font-size: 14px;
   margin: 5px 0;
 }
-/* line 96, ../sass/admin.scss */
+/* line 101, ../sass/admin.scss */
 .list li .label {
   font-weight: bold;
   margin-right: 10px;
 }
 
-/* line 103, ../sass/admin.scss */
+/* line 108, ../sass/admin.scss */
 .options {
   float: right;
 }
