--- a/site/assets/css/home.css
+++ b/site/assets/css/home.css
@@ -174,3 +174,13 @@ a.hideshow {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+
+/* line 113, ../sass/home.scss */
+.wrapper {
+  display: block;
+  position: relative;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 20px;
+}
