Render toggle-able map details

--- a/site/assets/js/templates/admin/index.html
+++ b/site/assets/js/templates/admin/index.html
@@ -6,6 +6,10 @@
             <%= name %> has <span class="count"></span> listings.
         </h1>
 
+        <section class="map-details">
+            
+        </section>
+
         <section class="form">
             <form id="add-listing" action="#">
             </form>
