--- a/site/assets/css/admin.css
+++ b/site/assets/css/admin.css
@@ -77,7 +77,35 @@ body {
   margin-bottom: 20px;
 }
 
-/* line 38, ../sass/admin.scss */
+/* line 37, ../sass/admin.scss */
+.map-details {
+  display: block;
+  position: relative;
+  width: 100%;
+  padding: 10px;
+  background-color: #f2f2f2;
+  border: 1px solid #adadad;
+  margin-bottom: 10px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+/* line 46, ../sass/admin.scss */
+.map-details .label {
+  display: inline-block;
+  font-weight: bold;
+}
+/* line 50, ../sass/admin.scss */
+.map-details .input {
+  display: block;
+  margin-bottom: 5px;
+}
+/* line 54, ../sass/admin.scss */
+.map-details .show-hide-container {
+  display: none;
+}
+
+/* line 60, ../sass/admin.scss */
 #add-listing div {
   display: block;
   position: relative;
@@ -86,34 +114,34 @@ body {
   box-sizing: border-box;
   margin-bottom: 10px;
 }
-/* line 43, ../sass/admin.scss */
+/* line 65, ../sass/admin.scss */
 #add-listing div input, #add-listing div textarea {
   width: 500px;
 }
-/* line 46, ../sass/admin.scss */
+/* line 68, ../sass/admin.scss */
 #add-listing div textarea {
   height: 200px;
 }
-/* line 49, ../sass/admin.scss */
+/* line 71, ../sass/admin.scss */
 #add-listing div.group {
   margin-top: 5px;
 }
-/* line 51, ../sass/admin.scss */
+/* line 73, ../sass/admin.scss */
 #add-listing div.group span {
   display: block;
   font-weight: bold;
   font-style: italic;
   margin-bottom: 5px;
 }
-/* line 57, ../sass/admin.scss */
+/* line 79, ../sass/admin.scss */
 #add-listing div.group > div {
   padding-left: 10px;
 }
-/* line 60, ../sass/admin.scss */
+/* line 82, ../sass/admin.scss */
 #add-listing div.group label {
   width: 140px;
 }
-/* line 65, ../sass/admin.scss */
+/* line 87, ../sass/admin.scss */
 #add-listing label {
   display: inline-block;
   position: relative;
@@ -121,13 +149,13 @@ body {
   font-weight: bold;
 }
 
-/* line 73, ../sass/admin.scss */
+/* line 95, ../sass/admin.scss */
 .list {
   margin: 0;
   padding: 0;
   list-style: none;
 }
-/* line 77, ../sass/admin.scss */
+/* line 99, ../sass/admin.scss */
 .list li {
   display: block;
   position: relative;
@@ -140,32 +168,32 @@ body {
   background-color: #cdf1ff;
   margin-bottom: 5px;
 }
-/* line 86, ../sass/admin.scss */
+/* line 108, ../sass/admin.scss */
 .list li div {
   display: block;
   position: relative;
 }
-/* line 89, ../sass/admin.scss */
+/* line 111, ../sass/admin.scss */
 .list li div.name {
   font-size: 16px;
   display: inline-block;
 }
-/* line 93, ../sass/admin.scss */
+/* line 115, ../sass/admin.scss */
 .list li div.slide {
   display: none;
 }
-/* line 96, ../sass/admin.scss */
+/* line 118, ../sass/admin.scss */
 .list li div.description h2 {
   font-size: 14px;
   margin: 5px 0;
 }
-/* line 101, ../sass/admin.scss */
+/* line 123, ../sass/admin.scss */
 .list li .label {
   font-weight: bold;
   margin-right: 10px;
 }
 
-/* line 108, ../sass/admin.scss */
+/* line 130, ../sass/admin.scss */
 .options {
   float: right;
 }
